# cheer-ascii-studio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh  server.py
.claude/skills/onboard/: SKILL.md
claude/: cheer-me-up.md  welcome-back-cheer.py
extension/: background.js  manifest.json  picker.html  picker.js
static/: index.html
studio/: braille.py  download.py  matte.py
